split build